Docs: Enhance CLAUDE.md with comprehensive development guidelines
Significantly expanded CLAUDE.md from minimal project instructions
to comprehensive development guidelines covering all aspects of the
codebase.

New sections added:
- Project Overview with clear description
- Complete technology stack listing
- Detailed project structure with descriptions
- Core architecture patterns (Chain of Responsibility, Factory, etc.)
- Development workflow (build, test, run)
- Code style & conventions (naming, error handling, logging)
- Performance considerations with critical rules
- Security guidelines (production env detection, Vault setup)
- Testing strategy (TDD approach, test structure)
- Common development tasks (how to add extract/transform/validate)
- Troubleshooting guide
- Git workflow & commit message format
- Resource links to documentation
- Recent changes log

Impact: Provides new developers with comprehensive onboarding guide
and serves as quick reference for experienced developers. Documents
all architectural decisions, coding standards, and best practices.